# test_ai_task

./: .gitignore  README.md  pyproject.toml
src/test_ai_task/: web.py
src/test_ai_task/application/: summarize_text.py
src/test_ai_task/application/common/: interactor.py
src/test_ai_task/bootstrap/: di.py
src/test_ai_task/domain/common/services/: text_summarizer.py
src/test_ai_task/domain/value_objects/: summarized_text.py  text_input.py
src/test_ai_task/infrastructure/summarize/: text_summarizer.py
src/test_ai_task/presentation/endpoints/: __init__.py  base.py  text.py
src/test_ai_task/presentation/schemas/: text.py
