[tool.poetry]
name = "test-ai-task"
version = "0.1.0"
description = ""
authors = ["Try <try@gmail.com>"]
readme = "README.md"
packages = [{include = "test_ai_task", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
