[tool.poetry]
name = "test-ai-task"
version = "0.1.0"
description = ""
authors = ["Andrii <andeyxakulishow@gmail.com>"]
readme = "README.md"
packages = [{include = "test_ai_task", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.41.2"
fastapi = "^0.111.0"
dishka = "^1.2.0"
torch = "^2.3.1"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchain-huggingface = "^0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
